# cs180-21-citrusdb-team

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  database.cpp  database.hpp  engine.cpp  engine.hpp  main.cpp  package-lock.json  test.cpp  test.json
backend/: attribute.cpp  attribute.hpp  collection.cpp  collection.hpp  databaseEngine.cpp  databaseEngine.hpp  deleteFile.cpp  deleteFile.hpp  document.cpp  document.hpp  entry.cpp  entry.hpp  file.cpp  file.hpp  jsonStrings.cpp  jsonStrings.hpp  readFile.cpp  readFile.hpp  toJSON.cpp  toJSON.hpp  uploadFile.cpp  uploadFile.hpp  userDatabase.cpp  userDatabase.hpp
collection/: collection.cpp  collection.hpp
database/: _meta.json  _metaDB.json  patients.json
database/eve123/: _meta.json
database/eve123/myCollection/: _meta.json  visits
database/templateUser/: _meta.json
frontend/citrusdb/: package-lock.json  package.json
frontend/citrusdb/src/: App.js  index.js  server.js
frontend/citrusdb/src/components/API/: API.js  CMakeLists.txt  crow.cpp  main.cpp
frontend/citrusdb/src/components/API/database/: accounts.json  patients.json
frontend/citrusdb/src/components/API/database/templateUser/templateCollection/: _meta.json
frontend/citrusdb/src/components/API/templates/: test.html
frontend/citrusdb/src/components/Collection/: Collection.css  Collection.js
frontend/citrusdb/src/components/Dashboard/: Dashboard.css  Dashboard.js
frontend/citrusdb/src/components/Forgot/: Forgot.css  Forgot.js
frontend/citrusdb/src/components/Login/: Login.css  Login.js
frontend/citrusdb/src/components/Register/: Register.css  Register.js
frontend/citrusdb/src/database/: people.json
upload/: multiread.txt  people.json  test.txt  testread.txt
